align fix

--- a/DracoTech/src/components/SignUpComponent/SignUpComponent.module.css
+++ b/DracoTech/src/components/SignUpComponent/SignUpComponent.module.css
@@ -17,7 +17,7 @@
     
 .inicioSesionHead {
     font-family: 'Cinzel', serif;
-    padding-left: 35%;
+    padding-left: 5%;
     padding-bottom: 10%;
     font-size: 46px;
 }
